--- a/misc/Jenkinsfile
+++ b/misc/Jenkinsfile
@@ -12,7 +12,7 @@ node {
      }
    }
    stage('docker build/push') {
-     docker.withRegistry('https://index.docker.io/v1/', 'dockerhub') {
+     docker.withRegistry('', 'dockerhub') {
        def app = docker.build("rhnravi/docker-nodejs-demo:${commit_id}", '.').push()
      }
    }
